--- a/nojira-daemon/www/index.html
+++ b/nojira-daemon/www/index.html
@@ -3,13 +3,13 @@
 <html>
 	<head>
 		<style>
-			body {font-family: Arial;}
+			body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;}
 			table tr td {padding-left: 8px; padding-right: 8px;}
 			table.logs thead tr td {font-weight: bold;}
 			table.logs tr:nth-child(even) {background: #F0F0F0;}
 			table.logs tr:nth-child(odd) {background: #FFFFFF;}
 			img#logo {vertical-align: middle;}
-			span#title {color:#153B62; font-size:72px; font-weight: bolder; vertical-align:middle; letter-spacing:-4px; text-decoration: underline;}
+			span#title {color:#153B62; font-size:70px; font-weight: bolder; vertical-align:middle; letter-spacing:-4px; text-decoration: underline;}
 			div#footer {font-size: 10px;}
 		</style>
 		<title>nojira - $Title</title>
