Color is now handled by CSS.

--- a/Nojira.Daemon/www/index.html
+++ b/Nojira.Daemon/www/index.html
@@ -8,6 +8,9 @@
 			table.logs thead tr td {font-weight: bold;}
 			table.logs tr:nth-child(even) {background: #F0F0F0;}
 			table.logs tr:nth-child(odd) {background: #FFFFFF;}
+			table.logs tr td.info {color: #4080f0;}
+			table.logs tr td.warning {color: #ffb000;}
+			table.logs tr td.error {color: #ff0000;}
 			img#logo {vertical-align: middle;}
 			span#title {color:#153B62; font-size:70px; font-weight: bolder; vertical-align:middle; letter-spacing:-4px; text-decoration: underline;}
 			div#error {color: red; background-color: #ffe0e0; border: 1px solid red; border-radius: 4px; width:482px; margin: 4px 0px; padding: 6px 12px 6px 12px;}
