--- a/Nojira.Daemon/www/index.html
+++ b/Nojira.Daemon/www/index.html
@@ -4,6 +4,10 @@
 	<head>
 		<style>
 			body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;}
+			a.shortcut:link {color: #153B62; background-color: #e0f0ff; border: 1px solid #153B62; border-radius: 4px; text-decoration: none; padding: 0px 4px 0px 4px; font-size: 12px;}
+			a.shortcut:visited {color: #153B62; background-color: #e0f0ff; border: 1px solid #153B62; border-radius: 4px; text-decoration: none; padding: 0px 4px 0px 4px; font-size: 12px;}
+			a.shortcut:hover {color: #153B62; background-color: #d0e0ff; border: 1px solid #153B62; border-radius: 4px; text-decoration: none; padding: 0px 4px 0px 4px; font-size: 12px;}
+			a.shortcut:active {color: #153B62; background-color: #d0e0ff; border: 1px solid #153B62; border-radius: 4px; text-decoration: none; padding: 0px 4px 0px 4px; font-size: 12px;}		
 			table tr td {padding-left: 8px; padding-right: 8px;}
 			table.logs thead tr td {font-weight: bold;}
 			table.logs tr:nth-child(even) {background: #F0F0F0;}
@@ -24,7 +28,7 @@
 			<span id="title">$Title</span>
 		</div>
 		<div style="padding-bottom:16px;">
-			$Links
+			$Shortcuts
 		</div>
 		<div style="padding-bottom:16px;">
 			<input type="text" id="queryField" name="queryField" value="$Query" style="width:550px;">
